Improved CSS moment

--- a/index.html
+++ b/index.html
@@ -3,50 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minecraft:Java edition clients</title>
+    <title>Java clients</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="demo rainbow">Clients for Minecraft:Java edition</h1>
+    <h1 class="demo rainbow">Clients for Minecraft Java edition</h1>
     <div class="Clients">
-        <a href=""><img src="assets/icon.png" alt=""> Meteor Client <br> bla bla bla bla cringe </a>
-        <a href="https://meteorclient.com/" class="button" style="color: black; background-color: green; display: inline-block; margin-left: 600px; margin-top: 50px;">Download</a>
+        <a href="https://meteorclient.com/"><img src="assets/icon.png"></a>
+        <a href="https://meteorclient.com/" class="MeteorClientName">Meteor Client 1.19.3/1.19.4</a>
+        <div class="MeteorVer">Meteor is the best utility mod for griefing and crashing server. Not a ghost client which means most of the cheats are blatant. But it has the best cheats for most survival servers.<br><br>Click on the picture to download.</div>
     </div>
     </div>
     <br><br><br><br>
     <div class="cl2">
-        <a href=""><img src="assets/10699069.png" alt=""> Wurst client <br></a>
-        <a href="https://www.wurstclient.net/download/" class="button" style="color: black; background-color: green; display: inline-block; margin-left: 600px; margin-top: 50px;">Download</a>
+        <a href="https://www.wurstclient.net/download/"><img src="assets/10699069.png" alt=""></a>
+        <a href="https://www.wurstclient.net/download/" class="WurstName">Wurst Client 1.7.2 - 1.20.1</a>
+        <div class="WurstVer">Wurst has tons of cheats to use and troll that doesnt exist on the most clients. Also the thing that makes it specific from other clients is that this client versions include snapshots & pre-release versions. Recommended for vanilla servers.</div>
     </div>
     </div>
-    <br><br><br><br><br><br><br><br><br>
+    <br><br><br><br>
     <div class="cl3">
-        <a href=""><img src="assets/aristois.jpg" alt="">aristois client <br></a>
-        <a href="https://aristois.net/download" class="button" style="color: black; background-color: green; display: inline-block; margin-left: 600px; margin-top: 50px;">Download</a>
+        <a href="https://aristois.net/download"><img src="assets/aristois.jpg" alt=""></a>
+        <a href="https://aristois.net/download" class="AristoisName">Aristois 1.8.9 - 1.20.1</a>
+        <div class="AristoisVer">This client is my favorite so far. Not because of the features its because it comes with a installer and it gets frequently updated!.</div>
     </div>
     </div>
-    <br><br><br><br><br><br><br><br><br>
+    <br><br><br><br>
     <div class="cl4">
-        <a href=""><img src="assets/loge.png" alt="">Raven B++ client<br></a>
-        <a href="https://k-ov.github.io/download/" class="button" style="color: black; background-color: green; display: inline-block; margin-left: 600px; margin-top: 50px;">Download</a>
+        <a href="https://k-ov.github.io/download/"><img src="assets/loge.png" alt=""></a>
+        <a href="https://k-ov.github.io/download/" class="RavenName">Raven B++ 1.8.9</a>
+        <div class="RavenVer">Raven B++ is a continuation of Raven B+ which was being handled by Kopamed. This project was made because Raven B+ was discontinued.</div>
     </div>
     </div>
-    <br><br><br><br><br><br><br><br><br>
+    <br><br><br><br>
     <div class="cl5">
-        <a href=""><img src="assets/download (5).jpg" alt="">fdp client<br></a>
-        <a href="https://fdpinfo.github.io/download" class="button" style="color: black; background-color: green; display: inline-block; margin-left: 600px; margin-top: 50px;">Download</a>
+        <a href="https://fdpinfo.github.io/download"><img src="assets/fdp.jpg" alt=""></a>
+        <a href="https://fdpinfo.github.io/download" class="FDPName">FDP Client 1.8.9</a>
+        <div class="FDPVer">Best free 1.8.9 client out there! updates frequently and lots of configs that bypasses most anticheats.</div>
     </div>
     </div>
-    <br><br><br><br><br><br><br><br><br>
+    <br><br><br><br>
     <div class="cl6">
-        <a href=""><img src="assets/icon_694812.png" alt="">liquid bounce<br></a>
-        <a href="https://liquidbounce.net/download" class="button" style="color: black; background-color: green; display: inline-block; margin-left: 600px; margin-top: 50px;">Download</a>
+        <a href="https://liquidbounce.net/download"><img src="assets/icon_694812.png" alt=""></a>
+        <a href="https://liquidbounce.net/download" class="LBounceName">Liquid Bounce 1.8.9</a>
+        <div class="LBounceVer">It comes with a launcher which is pretty cool. Also bypasses most anticheats only if you've got the right configs.</div>
     </div>
     </div>
-    <br><br><br><br><br><br><br><br><br>
+    <br><br><br><br>
     <div class="cl7">
-        <a href=""><img src="assets/inertiawebsite.png" alt="">inertia client<br></a>
-        <a href="https://inertiaclient.com/Download.php" class="button" style="color: black; background-color: green; display: inline-block; margin-left: 600px; margin-top: 50px;">Download</a>
+        <a href="https://inertiaclient.com/"><img src="assets/inertiawebsite.png" alt=""></a>
+        <a href="https://inertiaclient.com/" class="InertiaName">Inertia 1.12.2 - 1.16.5</a>
+        <div class="InertiaVer">One of the best server griefing client. Even the famous youtubers used it against P2W servers. So sad it got discontinued.</div>
     </div>
+    <br><br>
+    <div class="disclaimer">More clients will be added. Happy hacking!</div>
 </body>
 </html>
